react_yusuf-maolana

--- a/7_Bootstrap/pratikum/Code Program/Index (Task Bootstrap).html
+++ b/7_Bootstrap/pratikum/Code Program/Index (Task Bootstrap).html
@@ -34,12 +34,12 @@
 			      <nav id="navbar" class="navbar">
 			        <ul>
 			          <li><a class="nav-link scrollto active" href="Index (Task Bootstrap).html">Home</a></li>
-			          <li><a class="nav-link scrollto">About</a></li>
+			          <li><a class="nav-link scrollto active" href="#about-us">About</a></li>
 			          <li><a class="nav-link scrollto">Features</a></li>
 			          <li><a class="nav-link scrollto">Screenshots</a></li>
 			          <li><a class="nav-link scrollto">Team</a></li>
 			          <li><a class="nav-link scrollto">Pricing</a></li>
-			          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+			          <li class="dropdown"><a href="Masukan Link"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
 			            <ul>
 			              <li><a href="Masukan Link">Menu 1</a></li>
 			              <li><a href="Masukan Link">Menu 2</a></li>
@@ -64,12 +64,11 @@
 
 			      <div class="container">
 			        <div class="row">
-			          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+			          <div class="col-md-6 col-lg-4" data-aos="zoom-out" data-aos-delay="100">
 			            <div class="feature-block">
 			              <img src="assets/img/svg/cloud.svg" alt="img">
 			              <h4>introducing whatsapp</h4>
 			              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-			              <a href="Masukan Link">read more</a>
 			            </div>
 			          </div>
 			          <div class="col-md-6 col-lg-4" data-aos="zoom-out" data-aos-delay="200">
@@ -77,15 +76,13 @@
 			              <img src="assets/img/svg/planet.svg" alt="img">
 			              <h4>user friendly interface</h4>
 			              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-			              <a href="Masukan Link">read more</a>
 			            </div>
 			          </div>
-			          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+			          <div class="col-md-6 col-lg-4" data-aos="zoom-out" data-aos-delay="300">
 			            <div class="feature-block">
 			              <img src="assets/img/svg/asteroid.svg" alt="img">
 			              <h4>build the app everyone love</h4>
 			              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-			              <a href="Masukan Link">read more</a>
 			            </div>
 			          </div>
 			        </div>
